@@ -393,7 +393,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
 
           final byte[] payloads;
           if (hasPayloads) {
-            ros.flush();
             payloads = new byte[(int) ros.length()];
             ros.writeTo(payloads, 0);
           } else {
